--- a/config/packages/dev/monolog.yaml
+++ b/config/packages/dev/monolog.yaml
@@ -1,10 +1,16 @@
 monolog:
+    channels: ["my"]
     handlers:
         main:
             type: stream
             path: "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug
             channels: ["!event"]
+        login:
+            type: stream
+            path: "%kernel.project_dir%/log/%kernel.environment%.event.log"
+            level: debug
+            channels: ["my"]
         # uncomment to get logging in your browser
         # you may have to allow bigger header sizes in your Web server configuration
         #firephp:
