--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "yiisoft/yii2-authclient": "^2.2",
         "yiisoft/yii2-bootstrap4": "^2.0",
         "yiisoft/yii2-jui": "^2.0",
-        "unclead/yii2-multiple-input": "~2.0"
+        "unclead/yii2-multiple-input": "~2.0",
+        "bizley/migration": "^4.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
